# OneFive

./: .gitignore  LICENSE  README.md
.github/workflows/: build-onefive-native.yml
.trae/documents/: 302-direct-link-service.md  Telegram用户模式手机号登录.md  frontend-redesign-phase5-8.md  frontend-redesign-phase7-9.md  frontend-redesign.md  onefive-project-init.md  修复文件列表列对齐问题.md  媒体识别整理功能计划.md  实现整理执行功能.md  文件管理模块实现计划.md  添加Telegram通知模块.md  (+1 more)
backend/: pyproject.toml  requirements.txt
backend/src/: run.py
backend/src/onefive/: __init__.py  exceptions.py  logger.py  main.py  paths.py
backend/src/onefive/api/: auth.py  config.py  direct_link.py  files.py  logs.py  notification.py  organize.py  share.py  share_wash.py  strm.py
backend/src/onefive/db/: __init__.py  database.py
backend/src/onefive/models/: schemas.py
backend/src/onefive/notification/: __init__.py  base.py  format.py  manager.py
backend/src/onefive/notification/telegram/: __init__.py  channel.py
backend/src/onefive/services/: auth_service.py  classify_service.py  config_service.py  direct_link_cache_service.py  direct_link_service.py  file_info_service.py  file_service.py  organize_service.py  p115_client_factory.py  quality_score.py  rename_service.py  share_organize_service.py  share_service.py  share_wash_service.py  strm_service.py  tmdb_service.py  token_service.py
backend/tests/: conftest.py  test_classify_service.py  test_database.py  test_file_info_service.py  test_paths.py  test_rename_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
onefive/: manifest
(+53 files in other folders)
