[project]
name = "onefive"
version = "0.1.0"
description = "壹伍 - 基于 p115client 的 115 网盘管理应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "p115client>=0.0.8",
    "p115nano302>=0.0.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "orjson>=3.9.0",
    "guessit>=3.8.0",
    "telethon>=1.36.0",
    "python-socks[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
